users refactoring, add slots logic
