# src/modules/slots/slots.dto.ts
@@ -1,0 +1,7 @@
+import { SlotDocument } from './slots.models';
+import { PublicUserDto } from '../users/users.dto';
+
+export type SlotDto = Omit<SlotDocument, '_id' | 'contractorId'> & {
+  id: string;
+  contractor: PublicUserDto;
+};
